tests/NormalTests/paczka2/big_fuzzy/84162872.err
Error in line 4: XX0LaJY4 S619 71,0
Error in line 13: eSjPhuaO7YN S865 98,59
Error in line 6: XX0LaJY4 S855 30,0
Error in line 10: BPCntqeONF S855 79,3
Error in line 11: eSjPhuaO7YN A409 60,6
Error in line 17: eSjPhuaO7YN S865 363,0
Error in line 23: S619 S865 93,5
Error in line 33: eSjPhuaO7YN S855 24,9
Error in line 31: BPCntqeONF S855 51,1
Error in line 53: S619 A409 5,1
Error in line 79: S619 S855 20,4
Error in line 81: U0T8T03 A409 18,7
Error in line 83: 0Oz A409 37,1
Error in line 88: S619 S855 55,6
Error in line 103: U0T8T03 S865 52,8
Error in line 106: U0T8T03 S855 21,5
Error in line 113: U0T8T03 A409 85,6
Error in line 120: S619 A409 98,0
Error in line 125: U0T8T03 S855 3,37
Error in line 124: 0Oz S855 92,0
Error in line 129: BPCntqeONF S855 16,7
Error in line 117: U0T8T03 S855 8,7
Error in line 135: U0T8T03 A409 56,8
Error in line 139: eSjPhuaO7YN A409 61,7
Error in line 155: 0Oz S855 6,4
Error in line 156: eSjPhuaO7YN A409 93,5
Error in line 159: eSjPhuaO7YN S619 50,4
Error in line 164: S619 S865 10,5
Error in line 172: 0Oz S619 50,1
Error in line 180: eSjPhuaO7YN S619 91,9
Error in line 187: U0T8T03 S865 73,2
Error in line 190: eSjPhuaO7YN S865 37,4
Error in line 207: 0Oz A409 55,3
Error in line 212: 0Oz S855 93,4
Error in line 213: 0Oz S865 32,1
Error in line 226: BPCntqeONF S855 35,1
Error in line 235: U0T8T03 S619 56,9
Error in line 242: BPCntqeONF S855 53,8
